--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,9 @@
   "extends": [
     "next/core-web-vitals",
     "@rocketseat/eslint-config/next"
-  ]
+  ],
+  /* Configuração para retirar erros de syntaxe dos comandos personalizados do cypress */
+  "rules": {
+    "@typescript-eslint/no-namespace": "off"
+  }
 }
